--- a/main_page/lib/css/style.scss
+++ b/main_page/lib/css/style.scss
@@ -10,19 +10,20 @@
 
 section {
     height:4000px;
-    width:1280px;
-    margin: 0 auto;
 }
 
 //Slide 1
-#slide-1 {
-    position:relative;
-}
 
-//#slide-1 .bg{
-//    height:100%;
-//    width:100%;
-//}
+#slide-1 .bg{
+    height:100%;
+    width:100%;
+    background-image:url(../images/landing.gif);
+    background-size:cover;
+    position:fixed;
+    top:0;
+    left:0;
+    z-index: 0;
+}
 
 #slide-1 #title{
     width:600px;
