--- a/main_page/lib/css/style.scss
+++ b/main_page/lib/css/style.scss
@@ -1,116 +1,13 @@
-#position-log{
-    position:fixed;
-    top:20px;
-    left:20px;
-    background-color:rgba(0,0,0,0.5);
-    color:white;
-    padding:20px;
-    z-index:9999;
-}
+@import "partials/variables";
+@import "partials/utilities";
+@import "partials/reset";
+@import "partials/classes";
+@import "partials/grids";
 
-section {
-    height:4000px;
-}
+@import "partials/theme";
 
-//Slide 1
+// sass --watch style.scss:style.min.css --style compressed
+// .. --style:nested
+// .. --style:expanded
 
-#slide-1 .bg{
-    height:100%;
-    width:100%;
-    background-image:url(../images/landing.gif);
-    background-size:cover;
-    position:fixed;
-    top:0;
-    left:0;
-    z-index: 0;
-}
 
-#slide-1 #title{
-    width:600px;
-    height:600px;
-    position:fixed;
-    top:30%;
-    left:35%;
-    font-size:48px;
-    font-weight:bold;
-    z-index:2;
-}
-
-#slide-1 #coit{
-    width:100%;
-    height:100%;
-    background:url(../images/coit-tower.png) no-repeat;
-    position:fixed;
-    top:0;
-    left:0;
-    z-index:1;
-}
-
-#slide-1 img, #slide-2 img{
-    width:100%;
-    height:auto;
-}
-
-#slide-1 .fog-1{
-    width:700px;
-    height:800px;
-    position:fixed;
-    top:20%;
-    right:0;
-    z-index:3;
-}
-
-#slide-1 .fog-2{
-    width:700px;
-    height:800px;
-    position:fixed;
-    top:55%;
-    left:0;
-    z-index:4;
-}
-
-#slide-1 .text{
-    width:500px;
-    position:fixed;
-    top:20%;
-    left:40%;
-    z-index:5;
-}
-
-//Slide 2
-#slide-2 #twin{
-    width:100%;
-    height:100%;
-    background:url(../images/twin.png) no-repeat;
-    background-size:contain;
-    position:fixed;
-    top:0;
-    left:0;
-    z-index:6;
-}
-
-#slide-2 .fog-1{
-    width:700px;
-    height:800px;
-    position:fixed;
-    top:20%;
-    right:0;
-    z-index:7;
-}
-
-#slide-2 .fog-2{
-    width:700px;
-    height:800px;
-    position:fixed;
-    top:55%;
-    left:0;
-    z-index:8;
-}
-
-#slide-2 .text{
-    width:500px;
-    position:fixed;
-    top:20%;
-    left:40%;
-    z-index:9;
-}
