updated alamo square image, tried to make it fit into our grid system and make it responsive, but haven't been able to do so

--- a/main_page/lib/css/partials/_reset.scss
+++ b/main_page/lib/css/partials/_reset.scss
@@ -104,11 +104,11 @@ figcaption{
     @include gradient;
     @include ease-in-out(0.3s);
     h1{
-        color:$color-cream;
+        color:white;
         text-transform: uppercase;
 }
     p{
-        color:lighten($color-cream,10%);
+        color:lighten(white,10%);
         margin-bottom:10%;
         margin-left:auto;
         margin-right:auto;
