--- a/main_page/lib/css/style.css
+++ b/main_page/lib/css/style.css
@@ -114,7 +114,7 @@ figcaption {
   -moz-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out; }
   figcaption h1 {
-    color: #edebe6;
+    color: white;
     text-transform: uppercase; }
   figcaption p {
     color: white;
@@ -125,629 +125,7 @@ figcaption {
   figcaption:hover {
     opacity: 1; }
 
-/* @mixin center-in-parent{
-    margin-left:auto;
-    margin-right:auto;
-} */
-/* .container{
-	width:$container-xl;
-	@include center-in-parent;
-} */
-/*============Nesting classes============*/
-/*============BUTTON CLASSES============*/
-.btn-dark {
-  border: 2px solid #403b33;
-  color: #403b33;
-  background: transparent;
-  padding: 0.6em;
-  margin: 0.6em auto;
-  display: block;
-  text-align: center;
-  width: 220px;
-  font-weight: 400;
-  letter-spacing: 0.05em;
-  font-size: 1.2em;
-  font-family: "Cabin Condensed", sans-serif;
-  text-transform: uppercase;
-  position: relative;
-  cursor: pointer;
-  outline: 0;
-  transition: all 0.2s ease-in-out;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out; }
-  .btn-dark:hover {
-    background: #403b33;
-    color: #bfc4cc;
-    -webkit-box-shadow: inset 0px 0px 30px 0px #24211c;
-    -moz-box-shadow: inset 0px 0px 30px 0px #24211c;
-    box-shadow: inset 0px 0px 30px 0px #24211c;
-    border-color: #24211c; }
-  .btn-dark:active {
-    top: 2px; }
-  .btn-dark a {
-    color: white; }
-
-.btn-light {
-  border: 2px solid #edebe6;
-  color: #edebe6;
-  background: transparent;
-  padding: 0.6em;
-  margin: 0.6em auto;
-  display: block;
-  text-align: center;
-  width: 220px;
-  font-weight: 400;
-  letter-spacing: 0.05em;
-  font-size: 1.2em;
-  font-family: "Cabin Condensed", sans-serif;
-  text-transform: uppercase;
-  position: relative;
-  cursor: pointer;
-  outline: 0;
-  transition: all 0.2s ease-in-out;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out; }
-  .btn-light:hover {
-    background: #edebe6;
-    color: #121419;
-    -webkit-box-shadow: inset 0px 0px 30px 0px #d8d3c8;
-    -moz-box-shadow: inset 0px 0px 30px 0px #d8d3c8;
-    box-shadow: inset 0px 0px 30px 0px #d8d3c8;
-    border-color: #d8d3c8; }
-  .btn-light:active {
-    top: 2px; }
-  .btn-light a {
-    color: white; }
-  .btn-light:hover > a {
-    color: #121419;
-    text-shadow: none; }
-
-.btn-red {
-  border: 2px solid #d3643b;
-  color: #d3643b;
-  background: transparent;
-  padding: 0.6em;
-  margin: 0.6em auto;
-  display: block;
-  text-align: center;
-  width: 220px;
-  font-weight: 400;
-  letter-spacing: 0.05em;
-  font-size: 1.2em;
-  font-family: "Cabin Condensed", sans-serif;
-  text-transform: uppercase;
-  position: relative;
-  cursor: pointer;
-  outline: 0;
-  transition: all 0.2s ease-in-out;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out; }
-  .btn-red:hover {
-    background: #d3643b;
-    color: #2c9bc4;
-    -webkit-box-shadow: inset 0px 0px 30px 0px #b34e28;
-    -moz-box-shadow: inset 0px 0px 30px 0px #b34e28;
-    box-shadow: inset 0px 0px 30px 0px #b34e28;
-    border-color: #b34e28; }
-  .btn-red:active {
-    top: 2px; }
-  .btn-red a {
-    color: white; }
-
-.btn-teal {
-  border: 2px solid #94c7b6;
-  color: #94c7b6;
-  background: transparent;
-  padding: 0.6em;
-  margin: 0.6em auto;
-  display: block;
-  text-align: center;
-  width: 220px;
-  font-weight: 400;
-  letter-spacing: 0.05em;
-  font-size: 1.2em;
-  font-family: "Cabin Condensed", sans-serif;
-  text-transform: uppercase;
-  position: relative;
-  cursor: pointer;
-  outline: 0;
-  transition: all 0.2s ease-in-out;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out; }
-  .btn-teal:hover {
-    background: #94c7b6;
-    color: #6b3849;
-    -webkit-box-shadow: inset 0px 0px 30px 0px #73b59f;
-    -moz-box-shadow: inset 0px 0px 30px 0px #73b59f;
-    box-shadow: inset 0px 0px 30px 0px #73b59f;
-    border-color: #73b59f; }
-  .btn-teal:active {
-    top: 2px; }
-  .btn-teal a {
-    color: white; }
-
-.btn-lime {
-  border: 2px solid #d6e1c7;
-  color: #d6e1c7;
-  background: transparent;
-  padding: 0.6em;
-  margin: 0.6em auto;
-  display: block;
-  text-align: center;
-  width: 220px;
-  font-weight: 400;
-  letter-spacing: 0.05em;
-  font-size: 1.2em;
-  font-family: "Cabin Condensed", sans-serif;
-  text-transform: uppercase;
-  position: relative;
-  cursor: pointer;
-  outline: 0;
-  transition: all 0.2s ease-in-out;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out; }
-  .btn-lime:hover {
-    background: #d6e1c7;
-    color: #291e38;
-    -webkit-box-shadow: inset 0px 0px 30px 0px #becfa6;
-    -moz-box-shadow: inset 0px 0px 30px 0px #becfa6;
-    box-shadow: inset 0px 0px 30px 0px #becfa6;
-    border-color: #becfa6; }
-  .btn-lime:active {
-    top: 2px; }
-  .btn-lime a {
-    color: white; }
-
-.btn-red-round {
-  border: 2px solid #d3643b;
-  color: #d3643b;
-  background: transparent;
-  padding: 0.6em;
-  margin: 0.6em auto;
-  display: block;
-  text-align: center;
-  width: 220px;
-  font-weight: 400;
-  letter-spacing: 0.05em;
-  font-size: 1.2em;
-  font-family: "Cabin Condensed", sans-serif;
-  text-transform: uppercase;
-  position: relative;
-  cursor: pointer;
-  outline: 0;
-  transition: all 0.2s ease-in-out;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  border-radius: 2em;
-  line-height: 1.25em; }
-  .btn-red-round:hover {
-    background: #d3643b;
-    color: #2c9bc4;
-    -webkit-box-shadow: inset 0px 0px 30px 0px #b34e28;
-    -moz-box-shadow: inset 0px 0px 30px 0px #b34e28;
-    box-shadow: inset 0px 0px 30px 0px #b34e28;
-    border-color: #b34e28; }
-  .btn-red-round:active {
-    top: 2px; }
-  .btn-red-round a {
-    color: white; }
-
-.btn-teal-round {
-  border: 2px solid #94c7b6;
-  color: #94c7b6;
-  background: transparent;
-  padding: 0.6em;
-  margin: 0.6em auto;
-  display: block;
-  text-align: center;
-  width: 220px;
-  font-weight: 400;
-  letter-spacing: 0.05em;
-  font-size: 1.2em;
-  font-family: "Cabin Condensed", sans-serif;
-  text-transform: uppercase;
-  position: relative;
-  cursor: pointer;
-  outline: 0;
-  transition: all 0.2s ease-in-out;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  border-radius: 2em;
-  line-height: 1.25em; }
-  .btn-teal-round:hover {
-    background: #94c7b6;
-    color: #6b3849;
-    -webkit-box-shadow: inset 0px 0px 30px 0px #73b59f;
-    -moz-box-shadow: inset 0px 0px 30px 0px #73b59f;
-    box-shadow: inset 0px 0px 30px 0px #73b59f;
-    border-color: #73b59f; }
-  .btn-teal-round:active {
-    top: 2px; }
-  .btn-teal-round a {
-    color: white; }
-
-.btn-lime-round {
-  border: 2px solid #d6e1c7;
-  color: #d6e1c7;
-  background: transparent;
-  padding: 0.6em;
-  margin: 0.6em auto;
-  display: block;
-  text-align: center;
-  width: 220px;
-  font-weight: 400;
-  letter-spacing: 0.05em;
-  font-size: 1.2em;
-  font-family: "Cabin Condensed", sans-serif;
-  text-transform: uppercase;
-  position: relative;
-  cursor: pointer;
-  outline: 0;
-  transition: all 0.2s ease-in-out;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  border-radius: 2em;
-  line-height: 1.25em; }
-  .btn-lime-round:hover {
-    background: #d6e1c7;
-    color: #291e38;
-    -webkit-box-shadow: inset 0px 0px 30px 0px #becfa6;
-    -moz-box-shadow: inset 0px 0px 30px 0px #becfa6;
-    box-shadow: inset 0px 0px 30px 0px #becfa6;
-    border-color: #becfa6; }
-  .btn-lime-round:active {
-    top: 2px; }
-  .btn-lime-round a {
-    color: white; }
-
-.btn-dark-round {
-  border: 2px solid #403b33;
-  color: #403b33;
-  background: transparent;
-  padding: 0.6em;
-  margin: 0.6em auto;
-  display: block;
-  text-align: center;
-  width: 220px;
-  font-weight: 400;
-  letter-spacing: 0.05em;
-  font-size: 1.2em;
-  font-family: "Cabin Condensed", sans-serif;
-  text-transform: uppercase;
-  position: relative;
-  cursor: pointer;
-  outline: 0;
-  transition: all 0.2s ease-in-out;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  border-radius: 2em;
-  line-height: 1.25em; }
-  .btn-dark-round:hover {
-    background: #403b33;
-    color: #bfc4cc;
-    -webkit-box-shadow: inset 0px 0px 30px 0px #24211c;
-    -moz-box-shadow: inset 0px 0px 30px 0px #24211c;
-    box-shadow: inset 0px 0px 30px 0px #24211c;
-    border-color: #24211c; }
-  .btn-dark-round:active {
-    top: 2px; }
-  .btn-dark-round a {
-    color: white; }
-
-.btn-light-round {
-  border: 2px solid #edebe6;
-  color: #edebe6;
-  background: transparent;
-  padding: 0.6em;
-  margin: 0.6em auto;
-  display: block;
-  text-align: center;
-  width: 220px;
-  font-weight: 400;
-  letter-spacing: 0.05em;
-  font-size: 1.2em;
-  font-family: "Cabin Condensed", sans-serif;
-  text-transform: uppercase;
-  position: relative;
-  cursor: pointer;
-  outline: 0;
-  transition: all 0.2s ease-in-out;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  border-radius: 2em;
-  line-height: 1.25em; }
-  .btn-light-round:hover {
-    background: #edebe6;
-    color: #121419;
-    -webkit-box-shadow: inset 0px 0px 30px 0px #d8d3c8;
-    -moz-box-shadow: inset 0px 0px 30px 0px #d8d3c8;
-    box-shadow: inset 0px 0px 30px 0px #d8d3c8;
-    border-color: #d8d3c8; }
-  .btn-light-round:active {
-    top: 2px; }
-  .btn-light-round a {
-    color: white; }
-  .btn-light-round:hover > a {
-    color: #121419;
-    text-shadow: none; }
-
-.btn-red-solid {
-  border: 2px solid #d3643b;
-  color: #d3643b;
-  background: transparent;
-  padding: 0.6em;
-  margin: 0.6em auto;
-  display: block;
-  text-align: center;
-  width: 220px;
-  font-weight: 400;
-  letter-spacing: 0.05em;
-  font-size: 1.2em;
-  font-family: "Cabin Condensed", sans-serif;
-  text-transform: uppercase;
-  position: relative;
-  cursor: pointer;
-  outline: 0;
-  transition: all 0.2s ease-in-out;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  background: #d3643b; }
-  .btn-red-solid:hover {
-    background: #d3643b;
-    color: #2c9bc4;
-    -webkit-box-shadow: inset 0px 0px 30px 0px #b34e28;
-    -moz-box-shadow: inset 0px 0px 30px 0px #b34e28;
-    box-shadow: inset 0px 0px 30px 0px #b34e28;
-    border-color: #b34e28; }
-  .btn-red-solid:active {
-    top: 2px; }
-  .btn-red-solid a {
-    color: white; }
-  .btn-red-solid a {
-    color: white; }
-  .btn-red-solid:hover {
-    background: #b34e28; }
-
-.btn-teal-solid {
-  border: 2px solid #94c7b6;
-  color: #94c7b6;
-  background: transparent;
-  padding: 0.6em;
-  margin: 0.6em auto;
-  display: block;
-  text-align: center;
-  width: 220px;
-  font-weight: 400;
-  letter-spacing: 0.05em;
-  font-size: 1.2em;
-  font-family: "Cabin Condensed", sans-serif;
-  text-transform: uppercase;
-  position: relative;
-  cursor: pointer;
-  outline: 0;
-  transition: all 0.2s ease-in-out;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  background: #94c7b6; }
-  .btn-teal-solid:hover {
-    background: #94c7b6;
-    color: #6b3849;
-    -webkit-box-shadow: inset 0px 0px 30px 0px #73b59f;
-    -moz-box-shadow: inset 0px 0px 30px 0px #73b59f;
-    box-shadow: inset 0px 0px 30px 0px #73b59f;
-    border-color: #73b59f; }
-  .btn-teal-solid:active {
-    top: 2px; }
-  .btn-teal-solid a {
-    color: white; }
-  .btn-teal-solid a {
-    color: white; }
-  .btn-teal-solid:hover {
-    background: #73b59f; }
-
-.btn-lime-solid {
-  border: 2px solid #d6e1c7;
-  color: #d6e1c7;
-  background: transparent;
-  padding: 0.6em;
-  margin: 0.6em auto;
-  display: block;
-  text-align: center;
-  width: 220px;
-  font-weight: 400;
-  letter-spacing: 0.05em;
-  font-size: 1.2em;
-  font-family: "Cabin Condensed", sans-serif;
-  text-transform: uppercase;
-  position: relative;
-  cursor: pointer;
-  outline: 0;
-  transition: all 0.2s ease-in-out;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  background: #d6e1c7; }
-  .btn-lime-solid:hover {
-    background: #d6e1c7;
-    color: #291e38;
-    -webkit-box-shadow: inset 0px 0px 30px 0px #becfa6;
-    -moz-box-shadow: inset 0px 0px 30px 0px #becfa6;
-    box-shadow: inset 0px 0px 30px 0px #becfa6;
-    border-color: #becfa6; }
-  .btn-lime-solid:active {
-    top: 2px; }
-  .btn-lime-solid a {
-    color: white; }
-  .btn-lime-solid a {
-    color: white; }
-  .btn-lime-solid:hover {
-    background: #becfa6; }
-
-.btn-light-solid {
-  border: 2px solid #edebe6;
-  color: #edebe6;
-  background: transparent;
-  padding: 0.6em;
-  margin: 0.6em auto;
-  display: block;
-  text-align: center;
-  width: 220px;
-  font-weight: 400;
-  letter-spacing: 0.05em;
-  font-size: 1.2em;
-  font-family: "Cabin Condensed", sans-serif;
-  text-transform: uppercase;
-  position: relative;
-  cursor: pointer;
-  outline: 0;
-  transition: all 0.2s ease-in-out;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  background: #edebe6; }
-  .btn-light-solid:hover {
-    background: #edebe6;
-    color: #121419;
-    -webkit-box-shadow: inset 0px 0px 30px 0px #d8d3c8;
-    -moz-box-shadow: inset 0px 0px 30px 0px #d8d3c8;
-    box-shadow: inset 0px 0px 30px 0px #d8d3c8;
-    border-color: #d8d3c8; }
-  .btn-light-solid:active {
-    top: 2px; }
-  .btn-light-solid a {
-    color: white; }
-  .btn-light-solid a {
-    color: white; }
-  .btn-light-solid:hover {
-    background: #d8d3c8; }
-
-.btn-dark-solid {
-  border: 2px solid #403b33;
-  color: #403b33;
-  background: transparent;
-  padding: 0.6em;
-  margin: 0.6em auto;
-  display: block;
-  text-align: center;
-  width: 220px;
-  font-weight: 400;
-  letter-spacing: 0.05em;
-  font-size: 1.2em;
-  font-family: "Cabin Condensed", sans-serif;
-  text-transform: uppercase;
-  position: relative;
-  cursor: pointer;
-  outline: 0;
-  transition: all 0.2s ease-in-out;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  background: #403b33; }
-  .btn-dark-solid:hover {
-    background: #403b33;
-    color: #bfc4cc;
-    -webkit-box-shadow: inset 0px 0px 30px 0px #24211c;
-    -moz-box-shadow: inset 0px 0px 30px 0px #24211c;
-    box-shadow: inset 0px 0px 30px 0px #24211c;
-    border-color: #24211c; }
-  .btn-dark-solid:active {
-    top: 2px; }
-  .btn-dark-solid a {
-    color: white; }
-  .btn-dark-solid a {
-    color: white; }
-  .btn-dark-solid:hover {
-    background: #24211c; }
-
-.btn-confirm {
-  border: 2px solid #88d3ba;
-  color: #88d3ba;
-  background: transparent;
-  padding: 0.6em;
-  margin: 0.6em auto;
-  display: block;
-  text-align: center;
-  width: 220px;
-  font-weight: 400;
-  letter-spacing: 0.05em;
-  font-size: 1.2em;
-  font-family: "Cabin Condensed", sans-serif;
-  text-transform: uppercase;
-  position: relative;
-  cursor: pointer;
-  outline: 0;
-  transition: all 0.2s ease-in-out;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  background: #88d3ba; }
-  .btn-confirm:hover {
-    background: #88d3ba;
-    color: #772c45;
-    -webkit-box-shadow: inset 0px 0px 30px 0px #62c6a5;
-    -moz-box-shadow: inset 0px 0px 30px 0px #62c6a5;
-    box-shadow: inset 0px 0px 30px 0px #62c6a5;
-    border-color: #62c6a5; }
-  .btn-confirm:active {
-    top: 2px; }
-  .btn-confirm a {
-    color: white; }
-  .btn-confirm a {
-    color: white; }
-  .btn-confirm:hover {
-    background: #62c6a5; }
-
-.btn-warning {
-  border: 2px solid #e55c29;
-  color: #e55c29;
-  background: transparent;
-  padding: 0.6em;
-  margin: 0.6em auto;
-  display: block;
-  text-align: center;
-  width: 220px;
-  font-weight: 400;
-  letter-spacing: 0.05em;
-  font-size: 1.2em;
-  font-family: "Cabin Condensed", sans-serif;
-  text-transform: uppercase;
-  position: relative;
-  cursor: pointer;
-  outline: 0;
-  transition: all 0.2s ease-in-out;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  background: #e55c29; }
-  .btn-warning:hover {
-    background: #e55c29;
-    color: #1aa3d6;
-    -webkit-box-shadow: inset 0px 0px 30px 0px #c34618;
-    -moz-box-shadow: inset 0px 0px 30px 0px #c34618;
-    box-shadow: inset 0px 0px 30px 0px #c34618;
-    border-color: #c34618; }
-  .btn-warning:active {
-    top: 2px; }
-  .btn-warning a {
-    color: white; }
-  .btn-warning a {
-    color: white; }
-  .btn-warning:hover {
-    background: #c34618; }
-
-.compact, .nav > ul {
+.compact {
   list-style-type: none;
   margin-top: 0;
   margin-bottom: 0;
@@ -757,25 +135,6 @@ figcaption {
   content: "";
   display: table;
   clear: both; }
-
-.nav ul li a {
-  display: block;
-  background-color: transparent;
-  text-transform: uppercase;
-  color: white;
-  float: left;
-  margin-right: 20px;
-  transition: all 0.2s ease-in-out;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  padding-bottom: 5px;
-  border-bottom: solid 2px rgba(255, 255, 255, 0); }
-  .nav ul li a:hover {
-    border-bottom: solid 2px white; }
-.nav .active a {
-  color: #d4dfc4;
-  text-shadow: 0px 0px 3px #6b6255; }
 
 .centered {
   margin-left: auto;
@@ -1422,6 +781,9 @@ figcaption {
 section {
   height: 4000px; }
 
+.bg-image {
+  min-width: 700px; }
+
 .slide-container {
   max-width: 1000px;
   margin: 0 auto;
@@ -1453,10 +815,11 @@ section {
   font-size: 48px;
   line-height: 1.6em; }
 
-#slide-1 #coit {
+#slide-1 #alamo {
   width: 100%;
   height: 100%;
-  background: url(../images/coit-tower.png) no-repeat;
+  background: url(../images/alamo.gif) no-repeat;
+  background-color: #0069DB;
   background-size: contain;
   background-position: bottom;
   background-repeat: no-repeat;
@@ -1469,27 +832,26 @@ section {
   height: auto; }
 
 #slide-1 .fog-1 {
-  width: 700px;
-  height: 800px;
+  width: 625px;
+  height: 123px;
   position: fixed;
-  top: 20%;
+  top: 10%;
   right: 0;
   z-index: 3; }
 
 #slide-1 .fog-2 {
-  width: 700px;
-  height: 800px;
+  width: 658px;
+  height: 232px;
   position: fixed;
   top: 55%;
   left: 0;
   z-index: 4; }
 
-#slide-1 .text {
+.text {
+  color: white;
+  display: inline-block;
   width: 500px;
-  position: fixed;
-  top: 20%;
-  left: 40%;
-  z-index: 5; }
+  margin-top: 20%; }
 
 #slide-2 #twin {
   width: 100%;
