--- a/main_page/lib/css/partials/_theme.scss
+++ b/main_page/lib/css/partials/_theme.scss
@@ -27,6 +27,10 @@ section {
     height:4000px;
 }
 
+.bg-image{
+    min-width:700px;
+}
+
 .slide-container{
     max-width:1000px;
     margin:0 auto;
@@ -43,7 +47,7 @@ section {
     background-size:contain;
     background-position:bottom;
     background-repeat:no-repeat;
-    background-color:rgb(239, 119, 0);
+    background-color:$ggb-orange;
     position:fixed;
     top:0;
     right:0;
@@ -62,11 +66,12 @@ section {
     line-height:1.6em;
 }
 
-//slide 1 - coit tower
-#slide-1 #coit{
+//slide 1 - alamo square
+#slide-1 #alamo{
     width:100%;
     height:100%;
-    background:url(../images/coit-tower.png) no-repeat;
+    background:url(../images/alamo.gif) no-repeat;
+    background-color:$alamo-blue;
     background-size:contain;
     background-position:bottom;
     background-repeat:no-repeat;
@@ -81,30 +86,36 @@ section {
 }
 
 #slide-1 .fog-1{
-    width:700px;
-    height:800px;
+    width:625px;
+    height:123px;
     position:fixed;
-    top:20%;
+    top:10%;
     right:0;
     z-index:3;
 }
 
 #slide-1 .fog-2{
-    width:700px;
-    height:800px;
+    width:658px;
+    height:232px;
     position:fixed;
     top:55%;
     left:0;
     z-index:4;
 }
 
-#slide-1 .text{
+.text{
+    color:white;
+    display:inline-block;
     width:500px;
-    position:fixed;
-    top:20%;
-    left:40%;
-    z-index:5;
+    margin-top:20%;
 }
+
+//#slide-1 .text{
+//    z-index:5;
+//    color:white;
+//    position:fixed;
+//    top:20%;
+//}
 
 //Slide 2
 #slide-2 #twin{
