--- a/main_page/lib/css/partials/_variables.scss
+++ b/main_page/lib/css/partials/_variables.scss
@@ -27,8 +27,8 @@ $size-shortnames:("xs","sm","md","lg","xl");
 // $container-xs: map-get($container-width,"xs");
 
 
-$color-cream:#edebe6;
-$color-lime:#d6e1c7;
+$ggb-orange:rgb(239, 119, 0);
+$alamo-blue:#0069DB;
 $color-teal:#94c7b6;
 $color-black:#403b33;
 $color-red:#d3643b;
