--- a/main_page/lib/css/partials/_classes.scss
+++ b/main_page/lib/css/partials/_classes.scss
@@ -41,12 +41,11 @@
 }
 
 .menu h1.logo a {
-	font-family: sans-serif;
-	font-size: 18px;
-	font-weight: 700;
-	letter-spacing: 0.15em;
-	line-height: 40px;
-	text-transform: uppercase;
+	font-family: $font-main, sans-serif;
+    font-weight:700;
+	font-size: 0.6em;
+	letter-spacing: 0.05em;
+	line-height: 30px;
 	color: $ggb-orange;
 	margin-top: 20px;
 }
@@ -55,16 +54,11 @@
 	color:#ffffff;
 }
 
-.menu img.logo {
-	margin: 20px 0;
-	max-width: 160px;
-}
-
 .menu a {
 	margin-left: 20px;
 	color: #ffffff;
 	display: block;
-	font-family: sans-serif;
+	font-family: $font-main,sans-serif;
 	font-size: 14px;
 	font-weight: 300;
 	line-height: 40px;
@@ -80,53 +74,11 @@
 	color: #ffffff;
 }
 
-.menu a > i {
-	float: left;
-	display: inline-block;
-	vertical-align: middle;
-	text-align: left;
-	width: 25px;
-	font-size: 14px;
-	line-height: 40px;
-	margin: 25px 2px;
-}
-
-.menu-close {
-	cursor: pointer;
-	display: block;
-	position: absolute;
-	font-size: 14px;
-	color: #808080;
-	width: 40px;
-	height: 40px;
-	line-height: 40px;
-	top: 20px;
-	right: 5px;
-	-webkit-transition: all .1s ease-in-out;
-	   -moz-transition: all .1s ease-in-out;
-		-ms-transition: all .1s ease-in-out;
-		 -o-transition: all .1s ease-in-out;
-			transition: all .1s ease-in-out;
-}
-
-.menu-close:hover {
-	color: #ffffff;
-	-webkit-transition: all .1s ease-in-out;
-	   -moz-transition: all .1s ease-in-out;
-		-ms-transition: all .1s ease-in-out;
-		 -o-transition: all .1s ease-in-out;
-			transition: all .1s ease-in-out;
-}
-
 /* Push the body after clicking the menu button */
 .body-push {
 	overflow-x: hidden;
 	position: relative;
 	left: 0;
-}
-
-.body-push-toright {
-	left: 200px;
 }
 
 .body-push-toleft {
@@ -135,11 +87,7 @@
 
 .menu,
 .body-push {
-	-webkit-transition: all .3s ease;
-	   -moz-transition: all .3s ease;
-		-ms-transition: all .3s ease;
-		 -o-transition: all .3s ease;
-			transition: all .3s ease;
+    @include ease-in-out(0.3s);
 }
 
 #menuToggle {
@@ -156,24 +104,8 @@
 	line-height: 40px;
 	cursor: pointer;
 	background: rgba(0,0,0,0.25);
-	-webkit-transition: all .1s ease-in-out;
-	   -moz-transition: all .1s ease-in-out;
-		-ms-transition: all .1s ease-in-out;
-		 -o-transition: all .1s ease-in-out;
-			transition: all .1s ease-in-out;
-}
-
-#menuToggle:hover {
-	color: #ffffff;
-	background: rgba(0,0,0,0.2);
-	-webkit-transition: all .1s ease-in-out;
-	   -moz-transition: all .1s ease-in-out;
-		-ms-transition: all .1s ease-in-out;
-		 -o-transition: all .1s ease-in-out;
-			transition: all .1s ease-in-out;
-}
-
-#menuToggle > i{
-	color:white;
-	font-size: 16px;
+    @include ease-in-out(0.1s);
+    &:hover{
+        background: rgba(0,0,0,0.2);
+    }
 }
