--- a/main_page/lib/css/style.css
+++ b/main_page/lib/css/style.css
@@ -107,7 +107,7 @@ figcaption {
   /* IE10+ */
   background: linear-gradient(to bottom, rgba(64, 59, 51, 0.98) 0%, rgba(67, 55, 48, 0.98) 12%, rgba(88, 29, 28, 0.62) 88%, rgba(91, 25, 25, 0.62) 100%);
   /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fa403b33', endColorstr='#9e5b1919',GradientType=0 );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fa403b33', endColorstr='#9e5b1919',GradientType=0 );
   /* IE6-9 */
   transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
@@ -161,27 +161,22 @@ figcaption {
   right: 0px; }
 
 .menu h1.logo a {
-  font-family: sans-serif;
-  font-size: 18px;
+  font-family: "Lato", sans-serif, sans-serif;
   font-weight: 700;
-  letter-spacing: 0.15em;
-  line-height: 40px;
-  text-transform: uppercase;
+  font-size: 0.6em;
+  letter-spacing: 0.05em;
+  line-height: 30px;
   color: #ef7700;
   margin-top: 20px; }
 
 .menu h1.logo a:hover {
   color: #ffffff; }
 
-.menu img.logo {
-  margin: 20px 0;
-  max-width: 160px; }
-
 .menu a {
   margin-left: 20px;
   color: #ffffff;
   display: block;
-  font-family: sans-serif;
+  font-family: "Lato", sans-serif, sans-serif;
   font-size: 14px;
   font-weight: 300;
   line-height: 40px;
@@ -194,60 +189,21 @@ figcaption {
 .menu a:active {
   color: #ffffff; }
 
-.menu a > i {
-  float: left;
-  display: inline-block;
-  vertical-align: middle;
-  text-align: left;
-  width: 25px;
-  font-size: 14px;
-  line-height: 40px;
-  margin: 25px 2px; }
-
-.menu-close {
-  cursor: pointer;
-  display: block;
-  position: absolute;
-  font-size: 14px;
-  color: #808080;
-  width: 40px;
-  height: 40px;
-  line-height: 40px;
-  top: 20px;
-  right: 5px;
-  -webkit-transition: all .1s ease-in-out;
-  -moz-transition: all .1s ease-in-out;
-  -ms-transition: all .1s ease-in-out;
-  -o-transition: all .1s ease-in-out;
-  transition: all .1s ease-in-out; }
-
-.menu-close:hover {
-  color: #ffffff;
-  -webkit-transition: all .1s ease-in-out;
-  -moz-transition: all .1s ease-in-out;
-  -ms-transition: all .1s ease-in-out;
-  -o-transition: all .1s ease-in-out;
-  transition: all .1s ease-in-out; }
-
 /* Push the body after clicking the menu button */
 .body-push {
   overflow-x: hidden;
   position: relative;
   left: 0; }
 
-.body-push-toright {
-  left: 200px; }
-
 .body-push-toleft {
   left: -200px; }
 
 .menu,
 .body-push {
-  -webkit-transition: all .3s ease;
-  -moz-transition: all .3s ease;
-  -ms-transition: all .3s ease;
-  -o-transition: all .3s ease;
-  transition: all .3s ease; }
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out; }
 
 #menuToggle {
   position: absolute;
@@ -263,24 +219,12 @@ figcaption {
   line-height: 40px;
   cursor: pointer;
   background: rgba(0, 0, 0, 0.25);
-  -webkit-transition: all .1s ease-in-out;
-  -moz-transition: all .1s ease-in-out;
-  -ms-transition: all .1s ease-in-out;
-  -o-transition: all .1s ease-in-out;
-  transition: all .1s ease-in-out; }
-
-#menuToggle:hover {
-  color: #ffffff;
-  background: rgba(0, 0, 0, 0.2);
-  -webkit-transition: all .1s ease-in-out;
-  -moz-transition: all .1s ease-in-out;
-  -ms-transition: all .1s ease-in-out;
-  -o-transition: all .1s ease-in-out;
-  transition: all .1s ease-in-out; }
-
-#menuToggle > i {
-  color: white;
-  font-size: 16px; }
+  transition: all 0.1s ease-in-out;
+  -webkit-transition: all 0.1s ease-in-out;
+  -moz-transition: all 0.1s ease-in-out;
+  -o-transition: all 0.1s ease-in-out; }
+  #menuToggle:hover {
+    background: rgba(0, 0, 0, 0.2); }
 
 .container {
   margin-left: auto;
@@ -960,7 +904,7 @@ section {
   width: 100%;
   height: 100%;
   background: url(../images/alamo.gif) no-repeat;
-  background-color: #0069db;
+  background-color: #0069DB;
   background-size: contain;
   background-position: bottom;
   background-repeat: no-repeat;
@@ -994,35 +938,33 @@ section {
   width: 500px;
   margin-top: 20%; }
 
-#slide-2 #twin {
+#slide-2 #embarcadero {
   width: 100%;
   height: 100%;
-  background: url(../images/twin.png) no-repeat;
+  background: url(../images/embarcadero.gif) no-repeat;
   background-size: contain;
+  background-color: #74A08F;
   position: fixed;
+  background-position: bottom;
+  background-repeat: no-repeat;
   top: 0;
   left: 0;
   z-index: 6; }
 
 #slide-2 .fog-1 {
-  width: 700px;
-  height: 800px;
+  width: 625px;
+  height: 123px;
   position: fixed;
-  top: 20%;
+  top: 6%;
   right: 0;
   z-index: 7; }
 
 #slide-2 .fog-2 {
-  width: 700px;
-  height: 800px;
+  width: 658px;
+  height: 232px;
   position: fixed;
-  top: 55%;
+  top: 50%;
   left: 0;
   z-index: 8; }
 
-#slide-2 .text {
-  width: 500px;
-  position: fixed;
-  top: 20%;
-  left: 40%;
-  z-index: 9; }
+/*# sourceMappingURL=style.css.map */
