--- a/fog/lib/css/partials/_variables.scss
+++ b/fog/lib/css/partials/_variables.scss
@@ -26,7 +26,7 @@ $size-shortnames:("xs","sm","md","lg","xl");
 // $container-sm: 640px;
 // $container-xs: map-get($container-width,"xs");
 
-
+$fog-white:#f8f8f8;
 $ggb-orange:rgb(239, 119, 0);
 $alamo-blue:#0069DB;
 $embarcadero-green:#74A08F;
