--- a/fog/lib/css/partials/_theme.scss
+++ b/fog/lib/css/partials/_theme.scss
@@ -31,6 +31,20 @@ section {
     min-width:700px;
 }
 
+.text{
+    display:inline-block;
+    width:500px;
+    margin-top:15%;
+}
+
+.landmark{
+    display:inline-block;
+    position:fixed;
+    bottom:0;
+    left:0;
+    width:100%;
+}
+
 .slide-container{
     max-width:1000px;
     margin:0 auto;
@@ -70,9 +84,9 @@ section {
 #slide-1 #alamo{
     width:100%;
     height:100%;
-    background:url(../images/alamo.gif) no-repeat;
-    background-color:$alamo-blue;
-    background-size:contain;
+    background:url(../images/fog.gif) no-repeat;
+    background-color:$fog-white;
+    background-size:cover;
     background-position:bottom;
     background-repeat:no-repeat;
     position:fixed;
@@ -89,34 +103,28 @@ section {
     width:625px;
     height:123px;
     position:fixed;
-    top:10%;
+    top:60%;
     right:0;
     z-index:3;
 }
 
 #slide-1 .fog-2{
-    width:658px;
-    height:232px;
+    width:519px;
+    height:111px;
     position:fixed;
     top:55%;
     left:0;
     z-index:4;
 }
 
-.text{
-    color:white;
-    display:inline-block;
-    width:500px;
-    margin-top:20%;
-}
 
 //Slide 2
 #slide-2 #embarcadero{
     width:100%;
     height:100%;
-    background:url(../images/embarcadero.gif) no-repeat;
+    background:url(../images/fog.gif) no-repeat;
     background-size:contain;
-    background-color:$embarcadero-green;
+    background-color:$fog-white;
     position:fixed;
     background-position:bottom;
     background-repeat:no-repeat;
