--- a/fog/lib/css/partials/_theme.scss
+++ b/fog/lib/css/partials/_theme.scss
@@ -61,7 +61,7 @@ section {
     background-size:contain;
     background-position:bottom;
     background-repeat:no-repeat;
-    background-color:$ggb-orange;
+    background-color:lighten($fog-white,2%);
     position:fixed;
     top:0;
     right:0;
@@ -151,4 +151,35 @@ section {
     z-index:8;
 }
 
+//Slide 3
+#slide-3 #coit{
+    width:100%;
+    height:100%;
+    background:url(../images/fog.gif) no-repeat;
+    background-size:contain;
+    background-color:$fog-white;
+    position:fixed;
+    background-position:bottom;
+    background-repeat:no-repeat;
+    top:0;
+    left:0;
+    z-index:6;
+}
 
+#slide-3 .fog-1{
+    width:625px;
+    height:123px;
+    position:fixed;
+    top:8%;
+    right:0;
+    z-index:7;
+}
+
+#slide-3 .fog-2{
+   width:658px;
+    height:232px;
+    position:fixed;
+    top:40%;
+    left:0;
+    z-index:8;
+}
