--- a/fog/lib/css/style.css
+++ b/fog/lib/css/style.css
@@ -906,7 +906,7 @@ section {
   background-size: contain;
   background-position: bottom;
   background-repeat: no-repeat;
-  background-color: #ef7700;
+  background-color: #fdfdfd;
   position: fixed;
   top: 0;
   right: 0;
@@ -981,6 +981,35 @@ section {
   height: 232px;
   position: fixed;
   top: 50%;
+  left: 0;
+  z-index: 8; }
+
+#slide-3 #coit {
+  width: 100%;
+  height: 100%;
+  background: url(../images/fog.gif) no-repeat;
+  background-size: contain;
+  background-color: #f8f8f8;
+  position: fixed;
+  background-position: bottom;
+  background-repeat: no-repeat;
+  top: 0;
+  left: 0;
+  z-index: 6; }
+
+#slide-3 .fog-1 {
+  width: 625px;
+  height: 123px;
+  position: fixed;
+  top: 8%;
+  right: 0;
+  z-index: 7; }
+
+#slide-3 .fog-2 {
+  width: 658px;
+  height: 232px;
+  position: fixed;
+  top: 40%;
   left: 0;
   z-index: 8; }
 
