--- a/fog/lib/css/partials/_variables.scss
+++ b/fog/lib/css/partials/_variables.scss
@@ -1,7 +1,6 @@
 //variabe is predefined name value
 //typefaces
-@import url(http://fonts.googleapis.com/css?family=Cabin+Condensed:400,700);
-@import url(http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans);
 
 $gutter-size: 1rem;
 //root em (rem) is always relative to the default
@@ -32,6 +31,17 @@ $alamo-blue:#0069DB;
 $embarcadero-green:#74A08F;
 
 
+//typeface
+@font-face {
+    font-family: 'Antenna-Regular';
+    src: url('../fonts/Antenna-Regular.eot');
+    src: url('../fonts/Antenna-Regular.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/Antenna-Regular.woff') format('woff'),
+         url('../fonts/Antenna-Regular.otf') format('truetype'),
+         url('../fonts/Antenna-Regular.svg#Antenna-Regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
 
-$font-main:'Lato', sans-serif;
-$font-heading:'Cabin Condensed', sans-serif;
+$font-heading: 'Antenna-Regular';
+$font-main: 'Open Sans', sans-serif ;
