Updated all illustration images, added one button, updated headline

--- a/fog/lib/css/partials/_theme.scss
+++ b/fog/lib/css/partials/_theme.scss
@@ -1,3 +1,7 @@
+html, body{
+    height:5800px !important;
+}
+
 #position-log{
     position:fixed;
     top:20px;
@@ -24,17 +28,29 @@
 }
 
 section {
-    height:4000px;
+    height:1000px;
+}
+
+
+.slide-container{
+    margin:0 auto;
+    height:100%;
+    padding:0;
+    position:relative;
 }
 
 .bg-image{
     min-width:700px;
 }
 
+//center text and put it on top of landmark img
 .text{
-    display:inline-block;
-    width:500px;
-    margin-top:15%;
+    margin-top:20%;
+    z-index: 500;
+    position:absolute;
+    z-index:500;
+    width:100%;
+    text-align: center;
 }
 
 .landmark{
@@ -43,15 +59,16 @@ section {
     bottom:0;
     left:0;
     width:100%;
+    z-index:400;
 }
 
-.slide-container{
-    max-width:1000px;
-    margin:0 auto;
-    height:100%;
-    padding:0;
-    position:relative;
+//make landmark images 100% wide
+#slide-1 img, #slide-2 img, #slide-3 img, #slide-4 img{
+    width:100%;
+    height:auto;
+    z-index:300;
 }
+
 
 //Slide 0 - landing
 #slide-0 .bg{
@@ -76,8 +93,8 @@ section {
     position:absolute;
     margin-top:20%;
     font-size:48px;
-    line-height:1.6em;
-}
+    line-height: 1.3em;
+    }
 
 //slide 1 - alamo square
 #slide-1 #alamo{
@@ -91,11 +108,6 @@ section {
     position:fixed;
     top:0;
     left:0;
-}
-
-#slide-1 img, #slide-2 img{
-    width:100%;
-    height:auto;
 }
 
 #slide-1 .fog-1{
@@ -193,6 +205,40 @@ section {
 }
 
 #slide-3 .fog-2{
+   width:658px;
+    height:232px;
+    position:fixed;
+    top:40%;
+    left:0;
+    z-index:8;
+}
+
+//Slide 4
+#slide-4 #palace{
+    width:100%;
+    height:100%;
+    background:url(../images/fog.gif) no-repeat;
+    background-size:contain;
+    background-color:$fog-white;
+    position:fixed;
+    background-position:bottom;
+    background-repeat:no-repeat;
+    top:0;
+    left:0;
+    z-index:6;
+}
+
+
+#slide-4 .fog-1{
+    width:625px;
+    height:123px;
+    position:fixed;
+    top:8%;
+    right:0;
+    z-index:7;
+}
+
+#slide-4 .fog-2{
    width:658px;
     height:232px;
     position:fixed;
