--- a/fog/lib/css/style.css
+++ b/fog/lib/css/style.css
@@ -112,7 +112,7 @@ figcaption {
   /* IE10+ */
   background: linear-gradient(to bottom, rgba(64, 59, 51, 0.98) 0%, rgba(67, 55, 48, 0.98) 12%, rgba(88, 29, 28, 0.62) 88%, rgba(91, 25, 25, 0.62) 100%);
   /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fa403b33', endColorstr='#9e5b1919',GradientType=0 );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fa403b33', endColorstr='#9e5b1919',GradientType=0 );
   /* IE6-9 */
   transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
@@ -241,6 +241,41 @@ figcaption {
   cursor: pointer; }
   #close:hover {
     color: rgba(255, 255, 255, 0.8); }
+
+.btn {
+  border: 2px solid #ef7700;
+  color: #ef7700;
+  background: transparent;
+  padding: 0.6em;
+  margin: 0.6em auto;
+  display: block;
+  text-align: center;
+  width: 220px;
+  font-weight: 400;
+  letter-spacing: 0.05em;
+  font-size: 1.2em;
+  font-family: "Antenna-Regular";
+  text-transform: uppercase;
+  position: relative;
+  cursor: pointer;
+  outline: 0;
+  transition: all 0.2s ease-in-out;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out; }
+  .btn:hover {
+    background: #ef7700;
+    color: white;
+    -webkit-box-shadow: inset 0px 0px 30px 0px #bc5e00;
+    -moz-box-shadow: inset 0px 0px 30px 0px #bc5e00;
+    box-shadow: inset 0px 0px 30px 0px #bc5e00;
+    border-color: #bc5e00; }
+  .btn:active {
+    top: 2px; }
+  .btn a {
+    color: white; }
+    .btn a:hover {
+      color: white; }
 
 .container {
   margin-left: auto;
@@ -857,6 +892,9 @@ figcaption {
   .offset-11 {
     margin-left: 91.66667%;
     margin-bottom: 20px; } }
+html, body {
+  height: 5800px !important; }
+
 #position-log {
   position: fixed;
   top: 20px;
@@ -880,29 +918,37 @@ figcaption {
   height: 100%; }
 
 section {
-  height: 4000px; }
+  height: 1000px; }
+
+.slide-container {
+  margin: 0 auto;
+  height: 100%;
+  padding: 0;
+  position: relative; }
 
 .bg-image {
   min-width: 700px; }
 
 .text {
-  display: inline-block;
-  width: 500px;
-  margin-top: 15%; }
+  margin-top: 20%;
+  z-index: 500;
+  position: absolute;
+  z-index: 500;
+  width: 100%;
+  text-align: center; }
 
 .landmark {
   display: inline-block;
   position: fixed;
   bottom: 0;
   left: 0;
-  width: 100%; }
+  width: 100%;
+  z-index: 400; }
 
-.slide-container {
-  max-width: 1000px;
-  margin: 0 auto;
-  height: 100%;
-  padding: 0;
-  position: relative; }
+#slide-1 img, #slide-2 img, #slide-3 img, #slide-4 img {
+  width: 100%;
+  height: auto;
+  z-index: 300; }
 
 #slide-0 .bg {
   height: 100%;
@@ -925,7 +971,7 @@ section {
   position: absolute;
   margin-top: 20%;
   font-size: 48px;
-  line-height: 1.6em; }
+  line-height: 1.3em; }
 
 #slide-1 #alamo {
   width: 100%;
@@ -938,10 +984,6 @@ section {
   position: fixed;
   top: 0;
   left: 0; }
-
-#slide-1 img, #slide-2 img {
-  width: 100%;
-  height: auto; }
 
 #slide-1 .fog-1 {
   width: 625px;
@@ -1032,3 +1074,34 @@ section {
   top: 40%;
   left: 0;
   z-index: 8; }
+
+#slide-4 #palace {
+  width: 100%;
+  height: 100%;
+  background: url(../images/fog.gif) no-repeat;
+  background-size: contain;
+  background-color: #f8f8f8;
+  position: fixed;
+  background-position: bottom;
+  background-repeat: no-repeat;
+  top: 0;
+  left: 0;
+  z-index: 6; }
+
+#slide-4 .fog-1 {
+  width: 625px;
+  height: 123px;
+  position: fixed;
+  top: 8%;
+  right: 0;
+  z-index: 7; }
+
+#slide-4 .fog-2 {
+  width: 658px;
+  height: 232px;
+  position: fixed;
+  top: 40%;
+  left: 0;
+  z-index: 8; }
+
+/*# sourceMappingURL=style.css.map */
