tweaked scrolling attributes, fixed navigation problems, added enquire.js in order to make page responsive

--- a/fog/lib/css/partials/_variables.scss
+++ b/fog/lib/css/partials/_variables.scss
@@ -27,8 +27,9 @@ $size-shortnames:("xs","sm","md","lg","xl");
 
 $fog-white:#f8f8f8;
 $ggb-orange:rgb(239, 119, 0);
-$alamo-blue:#0069DB;
-$embarcadero-green:#74A08F;
+$grey:#3a3a3a;
+$blue:#0069DB;
+$green:#74A08F;
 
 
 //typeface
