--- a/fog/lib/css/partials/_classes.scss
+++ b/fog/lib/css/partials/_classes.scss
@@ -21,17 +21,17 @@
 /* MENU CONFIG*/
 .menu {
 	position: fixed;
-	right: -200px;
-	width: 260px;
-	height:330px;
+	right: -250px;
+	width: 310px;
+    height:100%;
 	top: 0;
-	z-index: 10;
+	z-index: 800;
 	text-align: left;
     .menu-wrap {
 	position: absolute;
 	left: 80px;
 	background: #333;
-	width: 260px;
+	width: 310px;
 	height: 100%;
 }
 }
