--- a/fog/lib/css/partials/_theme.scss
+++ b/fog/lib/css/partials/_theme.scss
@@ -45,7 +45,7 @@ section {
 
 //center text and put it on top of landmark img
 .text{
-    margin-top:20%;
+    margin-top:15%;
     z-index: 500;
     position:absolute;
     z-index:500;
@@ -62,6 +62,12 @@ section {
     z-index:400;
 }
 
+.slide h1{
+    font-size:46px;
+    color:lighten($grey,5%);
+    text-transform: uppercase;
+}
+
 //make landmark images 100% wide
 #slide-1 img, #slide-2 img, #slide-3 img, #slide-4 img{
     width:100%;
@@ -71,7 +77,7 @@ section {
 
 
 //Slide 0 - landing
-#slide-0 .bg{
+#home .bg{
     height:100%;
     width:100%;
     background-image:url(../images/ggb.gif);
@@ -86,18 +92,18 @@ section {
     left:0;
 }
 
-#slide-0 #title{
+#home #title{
     width:100%;
     text-align:center;
     text-transform: uppercase;
     position:absolute;
-    margin-top:20%;
+    margin-top:10%;
     font-size:48px;
-    line-height: 1.3em;
-    }
+    color:$grey;
+}
 
 //slide 1 - alamo square
-#slide-1 #alamo{
+#slide-1 .bg-image{
     width:100%;
     height:100%;
     background:url(../images/fog.gif) no-repeat;
@@ -130,7 +136,7 @@ section {
 
 
 //Slide 2
-#slide-2 #embarcadero{
+#slide-2 .bg-image{
     width:100%;
     height:100%;
     background:url(../images/fog.gif) no-repeat;
@@ -172,7 +178,7 @@ section {
 }
 
 //Slide 3
-#slide-3 #coit{
+#slide-3 .bg-image{
     width:100%;
     height:100%;
     background:url(../images/fog.gif) no-repeat;
@@ -214,7 +220,7 @@ section {
 }
 
 //Slide 4
-#slide-4 #palace{
+#slide-4 .bg-image{
     width:100%;
     height:100%;
     background:url(../images/fog.gif) no-repeat;
@@ -225,7 +231,7 @@ section {
     background-repeat:no-repeat;
     top:0;
     left:0;
-    z-index:6;
+    z-index:9;
 }
 
 
@@ -233,16 +239,16 @@ section {
     width:625px;
     height:123px;
     position:fixed;
-    top:8%;
+    top:4%;
     right:0;
-    z-index:7;
+    z-index:10;
 }
 
 #slide-4 .fog-2{
    width:658px;
     height:232px;
     position:fixed;
-    top:40%;
+    top:55%;
     left:0;
-    z-index:8;
+    z-index:11;
 }
